# Orris-v2.0

./: README.md  backend.py  frontend.html  models.py  news_scraper.py  pyproject.toml  reddit_scraper.py  terminal.txt  utils.py
